[package]
name = "riscvemitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ux = { git = "https://github.com/kjetilkjeka/uX.git", rev = "1081930" }
derive_builder = "0.11.2"

[dev-dependencies]
faerie = "0.16.0"
target-lexicon = "0.11.2"